added app.oy and forms

--- a/templates/fortune_form.html
+++ b/templates/fortune_form.html
@@ -14,7 +14,8 @@
           <br>What is your first name:
           <input type="text" name="firstname"
           <br><br>
-          What is your last name:
+          What i
+        ''  s your last name:
           <input type="text" name="lastname"
           <br><br>
 
