--- a/templates/fortune_form.html
+++ b/templates/fortune_form.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>
@@ -31,7 +30,7 @@
 
 
         <p>What is your favorite anime:</p>
-        <select>
+        <select name="anime">
           <option value="Naruto">Naruto</option>
           <option value="One Piece">One Piece</option>
           <option value="Dragon Ball Z">Dragon Ball Z</option>
